// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/pagination/demo/basic.md correctly 1`] = `
<ul
  class="wmstool-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="true"
    class="wmstool-pagination-disabled wmstool-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-1 wmstool-pagination-item-active"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" wmstool-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/changer.md correctly 1`] = `
<ul
  class="wmstool-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" wmstool-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-3 wmstool-pagination-item-active"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-5 wmstool-pagination-item-before-jump-next"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    class="wmstool-pagination-jump-next"
    tabindex="0"
    title="Next 5 Pages"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <a>
      50
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" wmstool-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
  <li
    class="wmstool-pagination-options"
  >
    <div
      class="wmstool-pagination-options-size-changer wmstool-select wmstool-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="wmstool-select-selection
            wmstool-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="wmstool-select-selection__rendered"
        >
          <div
            class="wmstool-select-selection-selected-value"
            style="display:block;opacity:1"
            title="10 / page"
          >
            10 / page
          </div>
        </div>
        <span
          class="wmstool-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/controlled.md correctly 1`] = `
<ul
  class="wmstool-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" wmstool-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-3 wmstool-pagination-item-active"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" wmstool-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/itemRender.md correctly 1`] = `
<ul
  class="wmstool-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="true"
    class="wmstool-pagination-disabled wmstool-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a>
      Previous
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-1 wmstool-pagination-item-active"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-5 wmstool-pagination-item-before-jump-next"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    class="wmstool-pagination-jump-next"
    tabindex="0"
    title="Next 5 Pages"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <a>
      50
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" wmstool-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a>
      Next
    </a>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/jump.md correctly 1`] = `
<ul
  class="wmstool-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" wmstool-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-2 wmstool-pagination-item-active"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-5 wmstool-pagination-item-before-jump-next"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    class="wmstool-pagination-jump-next"
    tabindex="0"
    title="Next 5 Pages"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <a>
      50
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" wmstool-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
  <li
    class="wmstool-pagination-options"
  >
    <div
      class="wmstool-pagination-options-quick-jumper"
    >
      Goto
      <input
        type="text"
        value=""
      />
    </div>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/mini.md correctly 1`] = `
<div>
  <ul
    class="wmstool-pagination mini"
    unselectable="unselectable"
  >
    <li
      aria-disabled="true"
      class="wmstool-pagination-disabled wmstool-pagination-prev"
      tabindex="0"
      title="Previous Page"
    >
      <a
        class="wmstool-pagination-item-link"
      />
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-1 wmstool-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" wmstool-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="wmstool-pagination-item-link"
      />
    </li>
  </ul>
  <ul
    class="wmstool-pagination mini"
    unselectable="unselectable"
  >
    <li
      aria-disabled="true"
      class="wmstool-pagination-disabled wmstool-pagination-prev"
      tabindex="0"
      title="Previous Page"
    >
      <a
        class="wmstool-pagination-item-link"
      />
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-1 wmstool-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" wmstool-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="wmstool-pagination-item-link"
      />
    </li>
    <li
      class="wmstool-pagination-options"
    >
      <div
        class="wmstool-select-sm wmstool-pagination-options-size-changer wmstool-select wmstool-select-enabled"
      >
        <div
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="true"
          class="wmstool-select-selection
            wmstool-select-selection--single"
          role="combobox"
          tabindex="0"
        >
          <div
            class="wmstool-select-selection__rendered"
          >
            <div
              class="wmstool-select-selection-selected-value"
              style="display:block;opacity:1"
              title="10 / page"
            >
              10 / page
            </div>
          </div>
          <span
            class="wmstool-select-arrow"
            style="user-select:none;-webkit-user-select:none"
            unselectable="unselectable"
          >
            <b />
          </span>
        </div>
      </div>
      <div
        class="wmstool-pagination-options-quick-jumper"
      >
        Goto
        <input
          type="text"
          value=""
        />
      </div>
    </li>
  </ul>
  <ul
    class="wmstool-pagination mini"
    unselectable="unselectable"
  >
    <li
      class="wmstool-pagination-total-text"
    >
      Total 50 items
    </li>
    <li
      aria-disabled="true"
      class="wmstool-pagination-disabled wmstool-pagination-prev"
      tabindex="0"
      title="Previous Page"
    >
      <a
        class="wmstool-pagination-item-link"
      />
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-1 wmstool-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" wmstool-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="wmstool-pagination-item-link"
      />
    </li>
  </ul>
</div>
`;

exports[`renders ./components/pagination/demo/more.md correctly 1`] = `
<ul
  class="wmstool-pagination "
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" wmstool-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="wmstool-pagination-jump-prev"
    tabindex="0"
    title="Previous 5 Pages"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-4 wmstool-pagination-item-after-jump-prev"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-6 wmstool-pagination-item-active"
    tabindex="0"
    title="6"
  >
    <a>
      6
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-7"
    tabindex="0"
    title="7"
  >
    <a>
      7
    </a>
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-8 wmstool-pagination-item-before-jump-next"
    tabindex="0"
    title="8"
  >
    <a>
      8
    </a>
  </li>
  <li
    class="wmstool-pagination-jump-next"
    tabindex="0"
    title="Next 5 Pages"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
  <li
    class="wmstool-pagination-item wmstool-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <a>
      50
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" wmstool-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/simple.md correctly 1`] = `
<ul
  class="wmstool-pagination wmstool-pagination-simple "
>
  <li
    aria-disabled="false"
    class=" wmstool-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
  <li
    class="wmstool-pagination-simple-pager"
    title="2/5"
  >
    <input
      size="3"
      type="text"
      value="2"
    />
    <span
      class="wmstool-pagination-slash"
    >
      ／
    </span>
    5
  </li>
  <li
    aria-disabled="false"
    class=" wmstool-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a
      class="wmstool-pagination-item-link"
    />
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/total.md correctly 1`] = `
<div>
  <ul
    class="wmstool-pagination "
    unselectable="unselectable"
  >
    <li
      class="wmstool-pagination-total-text"
    >
      Total 85 items
    </li>
    <li
      aria-disabled="true"
      class="wmstool-pagination-disabled wmstool-pagination-prev"
      tabindex="0"
      title="Previous Page"
    >
      <a
        class="wmstool-pagination-item-link"
      />
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-1 wmstool-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" wmstool-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="wmstool-pagination-item-link"
      />
    </li>
  </ul>
  <br />
  <ul
    class="wmstool-pagination "
    unselectable="unselectable"
  >
    <li
      class="wmstool-pagination-total-text"
    >
      1-20 of 85 items
    </li>
    <li
      aria-disabled="true"
      class="wmstool-pagination-disabled wmstool-pagination-prev"
      tabindex="0"
      title="Previous Page"
    >
      <a
        class="wmstool-pagination-item-link"
      />
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-1 wmstool-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="wmstool-pagination-item wmstool-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" wmstool-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <a
        class="wmstool-pagination-item-link"
      />
    </li>
  </ul>
</div>
`;
